<resources>
    <string name="app_name">Practis</string>
    <string name="register_username">username</string>
    <string name="register_email">email</string>
    <string name="register_password">password</string>
    <string name="register_confirmpass">confirm password</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="page_title">Title</string>
    <string name="page_content">Start typing...</string>

    <string name="title_activity_help">HelpActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="no_title_content">No title and/or content have been set. Continue editing or discard current page and go to the main screen.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications_string">Notifications</string>
    <string name="time_spent_string">Time Spent Today</string>
    <string name="logout_button">Logout</string>
    <string name="help_button">Help</string>
    <string name="notif_reminder">Shall we send you a reminder per day for any urgent tasks that are due?</string>
    <string name="today_tasks">Today`s tasks</string>
    <string name="task_title">Task</string>
    <string name="due_date">Choose the Due Date</string>


</resources>