<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6E2FC"
        tools:context=".SettingsActivity">

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="40dp"
            android:drawableLeft="@drawable/ic_logout"
            android:gravity="left|center_vertical"
            android:hint="@string/logout_button"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            app:backgroundTint="#BC74D7"
            app:cornerRadius="25dip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/helpBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="28dp"
            android:gravity="left|center_vertical"
            android:hint="@string/help_button"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            app:backgroundTint="#BC74D7"
            app:cornerRadius="25dip"
            app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/notifButton"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="14dp"
                android:hint="@string/notifications_string"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notifTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/white" />
        </RelativeLayout>

        <Button
            android:id="@+id/timeSpentBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:gravity="left|center_vertical"
            android:hint="@string/time_spent_string"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            app:backgroundTint="#BC74D7"
            app:cornerRadius="25dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifButton" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="413dp"
            android:layout_height="60dp"
            android:background="#D5A7E3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/menuButton"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@android:color/transparent"
                app:icon="@drawable/menu_button"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="48dp"
                android:layout_height="46dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>